--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boredom Hub</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Boredom Hub</title>
 </head>
 <body>
-    <div class="background"></div>
-    <div class="content">
-        <h1>Welcome to Boredom Hub</h1>
-        <p>Your ultimate destination for fun, games, and entertainment.</p>
-        
-    </div>
+  <div class="sidebar">
+    <a href="index.html">Home</a>
+    <a href="games.html">Games</a>
+    <a href="chat.html">Chat</a>
+    <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+  </div>
 
-    <script>
-        function startGame() {
-            alert('Game feature coming soon! Stay tuned.');
-        }
-    </script>
+  <div class="main-content">
+    <header>
+      Welcome to Boredom Hub!
+    </header>
+
+    <!-- Your page content here -->
+    <p>Enjoy your stay and have fun with the games!</p>
+
+    <footer>
+      &copy; 2025 Boredom Hub | All Rights Reserved
+    </footer>
+  </div>
 </body>
 </html>
+
