--- a/games.html
+++ b/games.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <div class="sidebar">
-    <a href="#home">Home</a>
-    <a href="#games">Games</a>
-    <a href="#chat">Chat</a>
-    <a href="#about">About</a>
+    <a href="idnex.html">Home</a>
+    <a href="games.html">Games</a>
+    <a href="chat.html">Chat</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact us</a>
   </div>
 
   <div class="main-content">
