--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
 
       <!-- Game 1 Link -->
       <div class="game">
-        <h3><a href="pong.html">Pong</a></h3>
+        <h3><a href="pong/index.html">Pong</a></h3>
         <p>Classic Pong game. <br> <small>Click the link to play!</small></p>
         <img src="images/pong.png" alt="Pong Game" width="200">
       </div>
