--- a/games.html
+++ b/games.html
@@ -22,7 +22,7 @@
         </div>
         <script>
             const games = [
-                { name: "Pong", url: "pong.html" },
+                { name: "Pong", url: "pong/index.html" },
                 { name: "2048", url: "2048.html" },
                 { name: "Cluster Rush", url: "cluster-rush.html" }
             ];
