--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
             const games = [
                 { name: "Pong", url: "pong/index.html" },
                 { name: "2048", url: "2048.html" },
-                { name: "Cluster Rush", url: "cluster-rush.html" }
+                { name: "Cluster Rush", url: "Cluster Rush/index.html" }
             ];
 
             const gamesList = document.getElementById("games-list");
