--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
         <script>
             const games = [
                 { name: "Pong", url: "pong/index.html" },
-                { name: "2048", url: "2048.html" },
+                { name: "2048", url: "2048/index.html" },
                 { name: "Cluster Rush", url: "Cluster Rush/index.html" }
             ];
 
