--- a/games.html
+++ b/games.html
@@ -25,6 +25,7 @@
                 { name: "Pong", url: "pong/index.html" },
                 { name: "2048", url: "2048/index.html" },
                 { name: "Cluster Rush", url: "Cluster Rush/index.html" }
+                { name: "Pixel jump(my favorite game)", url: "jump-game/src/index.html" }
             ];
 
             const gamesList = document.getElementById("games-list");
