--- a/games.html
+++ b/games.html
@@ -24,8 +24,8 @@
             const games = [
                 { name: "Pong", url: "pong/index.html" },
                 { name: "2048", url: "2048/index.html" },
-                { name: "Cluster Rush", url: "Cluster Rush/index.html" }
-                { name: "Pixel jump(my favorite game)", url: "jump-game/src/index.html" }
+                { name: "Cluster Rush", url: "Cluster Rush/index.html" },
+                { name: "Pixel jump (my favorite game)", url: "jump-game/src/index.html" }
             ];
 
             const gamesList = document.getElementById("games-list");
