--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" target="_blank">Home</a>
+        <a href="games.html" target="_blank">Games</a>
+        <a href="about.html" target="_blank">About Us</a>
+        <a href="contact.html" target="_blank">Contact</a>
     </div>
     <div class="content">
         <h1>Welcome to Boredom Hub</h1>
@@ -22,3 +22,4 @@
     </div>
 </body>
 </html>
+
