--- a/chat.html
+++ b/chat.html
@@ -6,6 +6,18 @@
     <title>Boredom Hub Chat</title>
     <script src="https://cdn.jsdelivr.net/npm/ably@1.2.8"></script>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        #chatbox {
+            width: 80%;
+            height: 500px;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 16px;
+            overflow-y: auto;
+        }
+    </style>
 </head>
 <body>
     <h2>Boredom Hub Global Chat</h2>
