--- a/chat.html
+++ b/chat.html
@@ -27,7 +27,7 @@
     <button onclick="sendMessage()">Send</button>
 
     <script>
-        const API_KEY = "YOUR_ABLY_API_KEY"; // Replace with your Ably API Key
+        const API_KEY = "mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko"; // Replace with your Ably API Key
         const ably = new Ably.Realtime(API_KEY);
         const channel = ably.channels.get("boredom-hub-chat");
 
