--- a/chat.html
+++ b/chat.html
@@ -20,6 +20,13 @@
     </style>
 </head>
 <body>
+    <div class="sidebar">
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="chat.html">Chat</a>
+    </div>
     <h2>Boredom Hub Global Chat</h2>
     <textarea id="chatbox" readonly></textarea><br>
     <input id="username" placeholder="Enter username">
