--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <a href="index.html" target="_blank">Home</a>
         <a href="games.html" target="_blank">Games</a>
         <a href="about.html" target="_blank">About Us</a>
-        <a href="contact.html" target="_blank">Contact</a>
+        <a href="contact.html" target="_blank">Contact</a>   
+        <a href="chat.html" target="_blank">Chat</a>
     </div>
     <div class="content">
         <h1>Welcome to Boredom Hub</h1>
