--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
         <a href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="about.html">About Us</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact</a>  
+        <a href="chat.html">Chat</a> 
     </div>
     <div class="content">
         <h1>Contact</h1>
