--- a/games.html
+++ b/games.html
@@ -13,6 +13,7 @@
         <a href="games.html">Games</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
+        <a href="chat.html">Chat</a>
     </div>
     <div class="content">
         <h1>Games</h1>
