--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boredom Hub Chat</title>
     <script src="https://cdn.jsdelivr.net/npm/ably@1.2.8"></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
+        /* Centering the entire page */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -33,42 +35,52 @@
             margin: 10px 0;
         }
 
+        /* Chat container with a larger size and centered */
         #chat-container {
             background-color: #fff;
             border-radius: 10px;
-            padding: 20px;
+            padding: 30px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 500px;
+            width: 600px;  /* Increased width */
             max-width: 100%;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         h2 {
             margin-bottom: 20px;
         }
 
+        /* Larger chat box */
         #chatbox {
             width: 100%;
-            height: 300px;
+            height: 400px; /* Increased height */
             resize: none;
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 15px;
+            padding: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #f9f9f9;
             font-family: monospace;
+            font-size: 16px;
+            box-sizing: border-box;
         }
 
+        /* Input fields */
         input {
-            width: calc(50% - 10px);
-            padding: 10px;
-            margin: 5px;
+            width: 48%;
+            padding: 12px;
+            margin: 10px 5px;
             border-radius: 5px;
             border: 1px solid #ccc;
+            box-sizing: border-box;
         }
 
+        /* Send button */
         button {
-            padding: 10px 20px;
+            padding: 12px 25px;
             background-color: #4CAF50;
             color: white;
             border: none;
