--- a/chat.html
+++ b/chat.html
@@ -30,8 +30,8 @@
 
         /* Larger chat box */
         #chatbox {
-            width: 100%;
-            height: 400px; /* Increased height */
+            width: 50%%;
+            height: 200px; /* Increased height */
             resize: none;
             margin-bottom: 15px;
             padding: 15px;
