--- a/chat.html
+++ b/chat.html
@@ -7,10 +7,35 @@
     <script src="https://cdn.jsdelivr.net/npm/ably@1.2.8"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
-      
+        /* Centering the sidebar */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: flex-start;  /* Aligning to the left */
+            align-items: flex-start;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
         }
 
-        /* Chat container with a larger size and centered */
+        .sidebar {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .sidebar a {
+            color: #fff;
+            text-decoration: none;
+            display: block;
+            margin: 10px 0;
+        }
+
+        /* Chat container on the left side */
         #chat-container {
             background-color: #fff;
             border-radius: 10px;
@@ -22,6 +47,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-left: 20px;  /* Added margin to push it from the left */
         }
 
         h2 {
@@ -30,8 +56,8 @@
 
         /* Larger chat box */
         #chatbox {
-            width: 50%%;
-            height: 200px; /* Increased height */
+            width: 100%;
+            height: 400px; /* Increased height */
             resize: none;
             margin-bottom: 15px;
             padding: 15px;
