--- a/rabbitai.html
+++ b/rabbitai.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rabbit AI</title>
     <style>
-        body {
+        body { 
+            <div class="sidebar">
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>  
+        <a href="chat.html">Chat</a> 
+    </div>
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
