--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
+        <a href="rabbitai.html">Rabbit math problem AI</a>
     </div>
     <div class="content">
         <h1>About Us</h1>
