--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="about.html" target="_blank">About Us</a>
         <a href="contact.html" target="_blank">Contact</a>   
         <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitai.html" target="_blank ">Rabbit math problem AI</a>
     </div>
     <div class="content">
         <h1>Welcome to Boredom Hub</h1>
