--- a/rabbitai.html
+++ b/rabbitai.html
@@ -12,6 +12,7 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>  
         <a href="chat.html">Chat</a> 
+            <a href="rabbitai.html" target="_blank ">Rabbit math problem AI</a>
     </div>
             font-family: Arial, sans-serif;
             display: flex;
