--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
         <img src="https://i.redd.it/r1ipx39q1d4d1.jpeg" alt="Callie" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);">
       
          <p> Dev: gooperd</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZM89mlL-ug3T0syj_YWpMt2KWV1ztAma37g&s" alt="Callie" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);">
         
 </body>
 </html>
