--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
+        <a href="rabit.ai">Rabit.ai</a>
     </div>
     <div class="content">
         <h1>About Us</h1>
