--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
         <a href="games.html">Games</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>  
-        <a href="chat.html">Chat</a> 
+        <a href="chat.html">Chat</a>
+        <a href="rabbit.ai">Rabbit.ai</a> 
     </div>
     <div class="content">
         <h1>Contact</h1>
