--- a/chat.html
+++ b/chat.html
@@ -144,7 +144,7 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
-        <a href="rabbit.ai">Rabbit.ai</a>
+        <a href="rabbitAi.html">Rabbit.ai</a>
     </div>
     
     <div id="main-container">
