--- a/chat.html
+++ b/chat.html
@@ -13,14 +13,7 @@
             box-sizing: border-box;
         }
 
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
+        body
 
         /* Sidebar for devs to see all users' emails */
         .dev-sidebar {
