--- a/chat.html
+++ b/chat.html
@@ -6,6 +6,7 @@
     <title>Boredom Hub Chat</title>
     <script src="https://cdn.jsdelivr.net/npm/ably@1.2.8"></script>
     <link rel="stylesheet" href="styles.css">
+    <style>
         * {
             margin: 0;
             padding: 0;
