--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
     </div>
     
     <script>
-        const ably = new Ably.Realtime("YOUR_ABLY_API_KEY");
+        const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
         const channel = ably.channels.get("chat-room");
 
         function signIn() {
