--- a/rabbitAI.html
+++ b/rabbitAI.html
@@ -14,7 +14,7 @@
         <a href="about.html" target="_blank">About Us</a>
         <a href="contact.html" target="_blank">Contact</a>   
         <a href="chat.html" target="_blank">Chat</a> 
-      <a href="rabbit.ai.html" target="_blank">rabbitAI.html</a>
+      <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
     </div>
     
     <div class="content">
