--- a/games.html
+++ b/games.html
@@ -14,6 +14,7 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
     </div>
     <div class="content">
         <h1>Games</h1>
