--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>  
         <a href="chat.html">Chat</a>
-        <a href="rabbit.ai">Rabbit.ai</a> 
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+    
     </div>
     <div class="content">
         <h1>Contact</h1>
