--- a/chat.html
+++ b/chat.html
@@ -15,6 +15,7 @@
         <a href="about.html" target="_blank">About Us</a>
         <a href="contact.html" target="_blank">Contact</a>   
         <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
     </div>
     <div class="content">
         <h2>Chat Room</h2>
