--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="content">
         <h1>Welcome to Boredom Hub</h1>
         <p>Boredom Hub is your ultimate destination for fun and entertainment. Explore a variety of exciting games and enjoy a sleek, interactive experience designed to keep you engaged.</p>
+        <p> Check out our or partner vortex at https://dashboard.fluxus.org/</p>
     </div>
 </body>
 </html>
