--- a/chat.html
+++ b/chat.html
@@ -1,8 +1,39 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boredom Hub - Chat</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+</head>
+<body>
+    <div class="sidebar">
+        <a href="index.html" target="_blank">Home</a>
+        <a href="games.html" target="_blank">Games</a>
+        <a href="about.html" target="_blank">About Us</a>
+        <a href="contact.html" target="_blank">Contact</a>   
+        <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+    </div>
+    <div class="content">
+        <h2>Chat Room</h2>
+        <p id="authStatus">Not logged in</p>
+        <button onclick="signIn()">Sign In</button>
+        <button onclick="signOut()">Sign Out</button>
+        <br><br>
+        <input type="text" id="usernameInput" placeholder="Enter Username">
+        <input type="text" id="messageInput" placeholder="Type a message">
+        <button onclick="sendMessage()">Send</button>
+        <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
+    </div>
+    
+    <script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = {}; // Stores muted users with their expiration time
+    let mutedUsers = {}; // Object to store muted users and their expiration times
 
     function signIn() {
         const email = prompt("Enter your email:");
@@ -25,7 +56,7 @@
     }
 
     function sendMessage() {
-        const messageInput = document.getElementById("messageInput").value;
+        const messageInput = document.getElementById("messageInput").value.trim();
         const email = sessionStorage.getItem("userEmail");
         const username = sessionStorage.getItem("username");
 
@@ -36,7 +67,7 @@
 
         // **BLOCK muted users from sending messages**
         if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
-            alert("You are muted and cannot send messages for now.");
+            alert("You are muted and cannot send messages.");
             return;
         }
 
@@ -46,6 +77,7 @@
             return;
         }
 
+        // Send message to the chat
         channel.publish("message", { text: messageInput, user: email, username: username });
         document.getElementById("messageInput").value = "";
     }
@@ -61,10 +93,15 @@
         }
 
         const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /mute <email>");
+            return;
+        }
+
         const emailToMute = messageParts[1];
 
-        if (!emailToMute) {
-            alert("Please provide an email to mute.");
+        if (!emailToMute.includes("@")) {
+            alert("Invalid email format.");
             return;
         }
 
@@ -115,3 +152,6 @@
         loadMessages();
     };
 </script>
+
+</body>
+</html>
